# TradingAgents

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  FILE_BASED_REMOVAL_SUMMARY.md  FINAL_DECISION_COMPLETE_REMOVAL_SUMMARY.md  FINAL_DECISION_REMOVAL_SUMMARY.md  KILL_APP_README.md  OPTIMIZED_EXTRACTION_SUMMARY.md  README.md  SNAP_RECOMMENDATION_FIX_SUMMARY.md  check_all_recommendations.py  cleanup.py  complete_final_decision_cleanup.py  fix_all_recommendations.py  fix_recommendation_consistency.py  fix_snap_recommendation.py  kill_app.py  launch_webapp.py  launch_webapp_venv.py  main.py  pyproject.toml  requirements.txt  run_migration.py  setup.py  setup_webapp.py  start_webapp.sh  start_webapp_venv.sh  test_improved_patterns.py  test_kill_app.py  test_optimized_extraction.py  test_webapp.py
_attic/2025-09-14/: README.md  test_endpoints.py  verify_project.py
cli/: main.py
tradingagents/graph/: setup.py  trading_graph.py
tradingagents/storage/: __init__.py  (+10 more)
webapp/: GRACEFUL_SHUTDOWN_GUIDE.md  Procfile  RAILWAY_CLI_GUIDE.md  RAILWAY_CORS_PROXY_GUIDE.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_DEPLOYMENT_STEP_BY_STEP.md  RAILWAY_DOCS_INDEX.md  RAILWAY_ENV_SETUP.md  RAILWAY_TROUBLESHOOTING.md  README.md  app.py  deployment_test_config.json  deployment_validation_20250917_231607.json  env_validation.py  package-lock.json  package.json  railway.toml  railway_config_validation.json  railway_test_results.json  requirements.txt  run.py  test_websocket_integration.html  validate_deployment.py  validate_deployment.sh  validate_railway_config.py  vitest.config.js
(+42 files in other folders)
